k8s/PrivilegedPod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privileged-pod-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port: 
              number: 8080
      - path: /donate
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port: 
              number: 8080
